[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/SilverMinimizedCounter.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Roguelike/StatusMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/SilverGreaterCounter.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="StatusMenu" type="Control"]
script = ExtResource( 2 )

[node name="Background" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backlight" type="ColorRect" parent="Background"]
margin_left = -220.0
margin_top = -100.0
margin_right = 220.0
margin_bottom = 100.0
color = Color( 0.258824, 0.286275, 0.0235294, 1 )

[node name="Surrender" type="Control" parent="."]
margin_top = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backlight" type="ColorRect" parent="Surrender"]
margin_left = -220.0
margin_top = -50.0
margin_right = 220.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathLoad" type="ColorRect" parent="Surrender"]
margin_left = -220.0
margin_top = -50.0
margin_right = -220.0
margin_bottom = 50.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Surrender"]
margin_left = -60.0
margin_top = -100.0
margin_right = 68.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Die"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die" type="TouchScreenButton" parent="Surrender"]
position = Vector2( -220, -50 )
scale = Vector2( 22, 5 )
shape = SubResource( 1 )

[node name="DeathWaitFrame" type="Timer" parent="Surrender"]
wait_time = 0.02

[node name="EditDeck" type="Control" parent="."]
margin_top = 50.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backlight" type="ColorRect" parent="EditDeck"]
margin_left = -220.0
margin_top = -50.0
margin_right = 220.0
margin_bottom = 50.0
color = Color( 0.796078, 0.203922, 0.345098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditDeck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -115.0
margin_right = 223.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )
text = "Open Deck"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDeck" type="TouchScreenButton" parent="EditDeck"]
position = Vector2( -220, -50 )
scale = Vector2( 22, 5 )
shape = SubResource( 2 )

[connection signal="pressed" from="Surrender/Die" to="." method="_on_Die_pressed"]
[connection signal="released" from="Surrender/Die" to="." method="_on_Die_released"]
[connection signal="timeout" from="Surrender/DeathWaitFrame" to="." method="_on_DeathWaitFrame_timeout"]
[connection signal="pressed" from="EditDeck/OpenDeck" to="." method="_on_OpenDeck_pressed"]
